--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,3 +1,5 @@
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,4 +12,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.react-reveal {
+  position: relative;
+  z-index: 1;
+}
+
+.card {
+  border-radius: 0;
+  -webkit-box-shadow: 0px 6px 21px 0px #ececec;
+  -moz-box-shadow: 0px 6px 21px 0px #ececec;
+  box-shadow: 0px 6px 21px 0px #ececec;
 }
