--- a/src/components/Alert/CustomAlert.scss
+++ b/src/components/Alert/CustomAlert.scss
@@ -3,6 +3,7 @@
   width: 100%;
   border-radius: 0;
   z-index: 9;
+  border: 0;
   &__absolute {
     position: absolute;
     top: -24px;
@@ -11,7 +12,8 @@
   &__notify {
     position: fixed;
     top: 0;
-    padding: 23px 15px;
+    padding: 24px 15px;
     text-align: center;
+    animation: fadeIn 200ms;
   }
 }
