--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,4 +1,5 @@
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import './keyframes.scss';
 
 body {
   margin: 0;
@@ -21,7 +22,5 @@ code {
 
 .card {
   border-radius: 0;
-  -webkit-box-shadow: 0px 6px 21px 0px #ececec;
-  -moz-box-shadow: 0px 6px 21px 0px #ececec;
   box-shadow: 0px 6px 21px 0px #ececec;
 }
