--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -24,3 +24,12 @@ code {
   border-radius: 0;
   box-shadow: 0px 6px 21px 0px #ececec;
 }
+
+.spinner-grow {
+  position: absolute;
+  top: -18px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  z-index: 2;
+}
