netlify redirect 404 fix

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -25,6 +25,10 @@ code {
   box-shadow: 0px 6px 21px 0px #ececec;
 }
 
+.notfound {
+  box-shadow: none;
+}
+
 .spinner-grow {
   position: absolute;
   top: -18px;
